--- a/src/components/layout/styles.module.css
+++ b/src/components/layout/styles.module.css
@@ -1,3 +1,14 @@
 .main {
   padding: 50px 40px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+
+  & h2 {
+    font-family: var(--second-family);
+    font-weight: 600;
+    font-size: 14px;
+    color: #222;
+    margin-top: 8px;
+  }
 }
